All images in portfolio site are now responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img class="img img-thumbnail" src="Canada maple leaf gold coin.jpg" alt="Hari">
+                    <img class="img img-thumbnail" src="Canada maple leaf gold coin.jpg" class="img-fluid" alt="Hari">
                 </div>
                 <div class="col-lg-9">
                     <p>Hi there! My name is Hari. Carnatic music. Violin.</p>
