--- a/portfolio.html
+++ b/portfolio.html
@@ -38,21 +38,20 @@
                 </div>
             </div>
             <div class="row">
-                <div class="work">Word Guess
-                    <img src="technics-q-c-640-480-1.jpg" alt="Word Guess">
+                <div class="col-lg-3">Word Guess
+                    <img src="technics-q-c-640-480-1.jpg" class="img-fluid" alt="Word Guess">
                 </div>
-                <div class="work">RPG Game
-                    <img src="technics-q-c-640-480-2.jpg" alt="RPG Game">
+                <div class="col-lg-3">RPG Game
+                    <img src="technics-q-c-640-480-2.jpg" class="img-fluid" alt="RPG Game">
                 </div>
-                <div class="w-100"></div>
-                <div class="work">Trivia Game
-                    <img src="technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                <div class="col-lg-3">Trivia Game
+                    <img src="technics-q-c-640-480-5.jpg" class="img-fluid" alt="Trivia Game">
                 </div>
-                <div class="work">Rutgers Info Widget
-                    <img src="technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+                <div class="col-lg-3">Rutgers Info Widget
+                    <img src="technics-q-c-640-480-7.jpg" class="img-fluid" alt="Rutgers Info Widget">
                 </div>
-                <div class="work">Rock Paper Scissors
-                    <img src="technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+                <div class="col-lg-3">Rock Paper Scissors
+                    <img src="technics-q-c-640-480-9.jpg" class="img-fluid" alt="Rock Paper Scissors">
                 </div>
             </div>
         </div>
